# cookday

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
app/: __init__.py  main.py
app/static/: styles.css
app/templates/: index.html
cookday_agent/: __init__.py  agent.py  pipeline.py  prompts.py  schemas.py  tools.py
tests/: test_api.py  test_pipeline.py  test_tools.py
