[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookday"
version = "0.1.0"
description = "AI cooking day planner: meals, grocery, substitutions, budget — Google ADK + Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CookDay Contributors" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pillow>=10.0.0"]
adk = ["google-adk>=1.0.0", "litellm>=1.40.0"]
ollama = ["litellm>=1.40.0"]
all = ["google-adk>=1.0.0", "litellm>=1.40.0", "pytest>=8.0.0", "httpx>=0.27.0", "pillow>=10.0.0"]

[project.scripts]
cookday = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["cookday_agent*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
